tests/paczka1/fuzzy1/36557979.err
Error in line 5: idywXhRVjd A61A 76,4
Error in line 7: ZA9p S627 -1,3
Error in line 11: idywXhRVjd A610 54,74
Error in line 17: ZA9p S627 0,5
Error in line 18: ZA9p A667 61,7
Error in line 20: ZA9p A610 36,2
Error in line 12: 1IjcaM A667 22,0
